# PlatformOps

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  NEXT_STEPS.md  README.md  START_HERE.md  VIDEO_SCRIPT.md  WRITEUP.md  pyproject.toml
agents/: cdk_provisioning_agent.py  model_config.py  orchestrator.py  provisioning_agent.py  security_agent.py  terraform_provisioning_agent.py
config/: bindings.yaml  models.yaml
docs/: HARNESS_DESIGN.md  account_vending_machine_design.md  compute_paradigm_layering.md  config_storage_backend.md  control_ui_approval_queue_design.md  course_concepts_and_project_structure.md  creation_profiles_and_deterministic_discovery.md  creation_time_relationship_capture_and_diagrams.md  cross_project_network_sharing.md  crossplane_comparison_and_pattern_reuse.md  current_architecture.md  deterministic_plan_drafting.md  discovery_before_drafting_and_presentation_layer.md  eks_helm_mcp_integration.md  end_to_end_flow_example.md  environment_promotion_pipeline.md  external_ticket_approval_integration.md  flow_step_spec_decomposition.md  foundation_and_app_deploy_flow_example.md  foundation_app_layering_and_iam_tiers.md  foundation_blueprint_authoring_coding_agent.md  foundation_discovery_and_capability_matching.md  foundation_discovery_and_creation_chat_walkthrough.md  foundation_layer_decomposition.md  gcp_azure_verification_pass.md  harness_deep_dive.md  harness_memory_design.md  iac_based_discovery.md  iam_permissions_boundary_implementation.md  infra_discovery_and_platform_app_split.md  infra_discovery_triggers_and_extensibility.md  infra_graph_modeling_and_db_options.md  input_purposing_output_profiles.md  intent_routing_and_staged_confirmation.md  langgraph_outer_adk_inner_wiring.md  langgraph_vs_adk_inner_layer.md  model_agnosticism_and_hermes_agent_evaluation.md  multi_account_per_bu_design.md  multi_cloud_foundation_and_iam.md  org_bootstrap_privilege_boundary.md  (+20 more)
gateway/: compliance_preflight.py  infra_inventory_store.py  plan_request.py  schemas.py  skill_matching.py  skill_template_agent.py
harness/: config_engine.py  plan_request.py  schemas.py  (+4 more)
(+83 files in other folders)
