[project]
name = "platformops-agent"
version = "0.1.0"
description = "Multi-agent platform-ops system: AWS provisioning, security review, and SDLC compliance checking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "mcp",
    "boto3",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]
