[project]
name = "platformops-agent"
version = "0.1.0"
description = "Multi-agent platform-ops system: AWS provisioning, security review, and SDLC compliance checking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "mcp",
    "pyyaml",
    "pydantic",
    "python-hcl2>=8.1.2",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langchain-mcp-adapters>=0.3.0",
    "litellm>=1.92.0",
    "langchain-litellm>=0.7.0",
]
# Note: boto3 is no longer a direct dependency — provisioning now routes
# through external MCP servers (awslabs.aws-iac-mcp-server, awslabs.ccapi-mcp-server,
# HashiCorp's terraform-mcp-server) launched as subprocesses via `uvx`/their own
# install method, rather than calling boto3 in-process. `uv` (which provides
# `uvx`) is required at runtime; see README.md setup.

[project.optional-dependencies]
dev = ["pytest"]
